--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!-- 結果（記録）表示 -->
         <div id="result">
-            <p id="notice"> ※QOLスコア（0~100）目安（【0~30】良い　【30~60】要注意　【60超え】良くない</p>
+            <p id="notice"> ※QOLスコア（0~100）目安：【0~30】良い　【30~60】要注意　【60超え】良くない</p>
             <table id="menu">
                 <tr>
                     <th>日付</th>
